<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/clickable_item">
        <item
            android:id="@+id/signout"
            android:title="@string/sign_out"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_app_bar_save_btn"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save_progress"
        app:actionLayout="@layout/progress_layout"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/non_clickable_item">
        <item
            android:id="@+id/profile"
            android:enabled="false"
            android:title="@string/user"
            android:visible="true"
            app:showAsAction="never" />
    </group>

</menu>